name:           rpg-engine
version:        1.0.0
author:         Lukas Barragan Torres
cabal-version:  1.12
build-type:     Simple

library
  hs-source-dirs: lib
  build-depends: base >= 4.7 && <5, parsec >= 3.1.15.1
  exposed-modules: ParserModule, TypeModule, PlayerModule

executable rpg-engine
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base >= 4.7 && <5, rpg-engine

test-suite rpg-engine-test
  type: exitcode-stdio-1.0
  main-is: VoorbeeldTest.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends: base >=4.7 && <5, hspec <= 2.10.6, rpg-engine
